--- a/style.css
+++ b/style.css
@@ -99,6 +99,15 @@ body {
   margin: 0 0 32px;
 }
 
+.skills{
+
+
+  margin: 0 485px;
+  font-size: 28px;
+  line-height: 40px;
+  font-weight: 500;
+}
+
 .skills-list {
   margin: 0;
   padding: 0;
@@ -119,7 +128,10 @@ body {
 }
 
 .level {
-  margin: 4px 0 16px;
+   
+  
+  margin: 0 0 32px;
+  text-align: center;
   padding: 0;
   height: 14px;
   font-size: 0;
